{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 13,
  "lineage": "1816673d-b6e8-66c0-faea-3479c9dbea63",
  "resources": [
    {
      "module": "module.bodeodusvpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:084963261788:network-acl/acl-08f7243af03511bdf",
            "default_network_acl_id": "acl-08f7243af03511bdf",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08f7243af03511bdf",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "084963261788",
            "subnet_ids": [],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-084b1c7023a9216d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bodeodusvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bodeodusvpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:084963261788:route-table/rtb-00daa3b7bb7b256fa",
            "default_route_table_id": "rtb-00daa3b7bb7b256fa",
            "id": "rtb-00daa3b7bb7b256fa",
            "owner_id": "084963261788",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-084b1c7023a9216d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bodeodusvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bodeodusvpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:084963261788:security-group/sg-0d123d8634871406f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d123d8634871406f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "084963261788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-084b1c7023a9216d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bodeodusvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bodeodusvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:084963261788:internet-gateway/igw-05a38ece67adb8909",
            "id": "igw-05a38ece67adb8909",
            "owner_id": "084963261788",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-084b1c7023a9216d0"
          },
          "dependencies": [
            "module.bodeodusvpc.aws_vpc.this",
            "module.bodeodusvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bodeodusvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a38ece67adb8909",
            "id": "r-rtb-0508b387f868824291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0508b387f86882429",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bodeodusvpc.aws_internet_gateway.this",
            "module.bodeodusvpc.aws_route_table.public",
            "module.bodeodusvpc.aws_vpc.this",
            "module.bodeodusvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bodeodusvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:084963261788:route-table/rtb-0508b387f86882429",
            "id": "rtb-0508b387f86882429",
            "owner_id": "084963261788",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-public"
            },
            "tags_all": {
              "Name": "-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-084b1c7023a9216d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bodeodusvpc.aws_vpc.this",
            "module.bodeodusvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bodeodusvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfa784df6b999e70",
            "route_table_id": "rtb-0508b387f86882429",
            "subnet_id": "subnet-04ca858418705d66f"
          },
          "dependencies": [
            "module.bodeodusvpc.aws_route_table.public",
            "module.bodeodusvpc.aws_subnet.public",
            "module.bodeodusvpc.aws_vpc.this",
            "module.bodeodusvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edc4bf9059a268b6",
            "route_table_id": "rtb-0508b387f86882429",
            "subnet_id": "subnet-0b37f5fe4ad85d8c5"
          },
          "dependencies": [
            "module.bodeodusvpc.aws_route_table.public",
            "module.bodeodusvpc.aws_subnet.public",
            "module.bodeodusvpc.aws_vpc.this",
            "module.bodeodusvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bodeodusvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:084963261788:subnet/subnet-04ca858418705d66f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.7.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ca858418705d66f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084963261788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "-public-eu-west-1b"
            },
            "vpc_id": "vpc-084b1c7023a9216d0"
          },
          "dependencies": [
            "module.bodeodusvpc.aws_vpc.this",
            "module.bodeodusvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:084963261788:subnet/subnet-0b37f5fe4ad85d8c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.7.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b37f5fe4ad85d8c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084963261788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "-public-eu-west-1c"
            },
            "tags_all": {
              "Name": "-public-eu-west-1c"
            },
            "vpc_id": "vpc-084b1c7023a9216d0"
          },
          "dependencies": [
            "module.bodeodusvpc.aws_vpc.this",
            "module.bodeodusvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bodeodusvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:084963261788:vpc/vpc-084b1c7023a9216d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-08f7243af03511bdf",
            "default_route_table_id": "rtb-00daa3b7bb7b256fa",
            "default_security_group_id": "sg-0d123d8634871406f",
            "dhcp_options_id": "dopt-0c25c5299a762d61a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084b1c7023a9216d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00daa3b7bb7b256fa",
            "owner_id": "084963261788",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    }
  ]
}